--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "java.project.referencedLibraries": [
         "lib/**/*.jar",
-        "/Users/bhavesh/Documents/mysql-connector-j-8.1.0/mysql-connector-j-8.1.0.jar"
+        "/Users/bhavesh/Documents/mysql-connector-j-8.1.0/mysql-connector-j-8.1.0.jar",
+        "/Users/bhavesh/Documents/Tools/mysql-connector-j-8.1.0/mysql-connector-j-8.1.0.jar"
     ]
 }
