--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
     "java.project.referencedLibraries": [
         "lib/**/*.jar",
         "/Users/bhavesh/Documents/mysql-connector-j-8.1.0/mysql-connector-j-8.1.0.jar",
-        "/Users/bhavesh/Documents/Tools/mysql-connector-j-8.1.0/mysql-connector-j-8.1.0.jar"
-    ]
+        "/Users/bhavesh/Documents/Tools/mysql-connector-j-8.1.0/mysql-connector-j-8.1.0.jar",
+        "/Users/bhavesh/Documents/Tools/apache-tomcat-10.1.15/lib/servlet-api.jar"
+    ],
+    "java.configuration.updateBuildConfiguration": "interactive"
 }
